--- a/plugin.yml
+++ b/plugin.yml
@@ -3,3 +3,10 @@ description: mute the whole chat with this plugin!
 main: Teunboeke\MuteChat\Main
 version: 1.0.0 
 api: 3.0.0
+author: Teunboeke
+
+commands:
+ MuteChat:
+     aliases: [gm]
+     description: Enable/Disable Global Mute.
+         permission: Mute.Chat
